Docs using VuePress

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -10,6 +10,12 @@ a
 sup
     font-size 0.75em !important
 
+table
+    font-size 0.9em !important
+
+td:not(:last-child)
+    white-space: nowrap
+
 .content a code
     color $accentColor
 
